# magnolia

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yml
src/: App.svelte  main.js
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache_metadata.rs  dash.rs  font_manager.rs  hls.rs  logger.rs  main.rs  media_cache.rs  settings.rs  subtitle_cache.rs  torrent.rs  track_preferences.rs  tracking.rs  watch_history.rs
src-tauri/src/search/: eztv.rs  limetorrents.rs  mod.rs  nyaa.rs  piratebay.rs  x1337.rs
src/lib/: AboutModal.svelte  CacheManager.svelte  ErrorModal.svelte  FileSelector.svelte  MediaCarousel.svelte  MediaDetail.svelte  Onboarding.svelte  RecommendationsCarousel.svelte  SearchBar.svelte  SettingsPanel.svelte  SubtitleDebug.svelte  TabBar.svelte  TitleBar.svelte  TorrentDebug.svelte  TorrentManager.svelte  TorrentSelector.svelte  Updater.svelte  VideoPlayer.svelte  ViewAll.svelte  audioPlayer.js  consoleLogger.js  fileSelector.js  mkvDemuxer.js  srtSubtitleRenderer.js  streamingSrtFetcher.js  subtitleRenderer.js  tmdb.js  wyzieSubs.js
src/lib/stores/: listStore.js  modalStore.js  watchHistoryStore.js  watchProgressStore.js
src/lib/utils/: colorUtils.js  timeUtils.js
src/styles/: app.css  error-modal.css  file-selector.css  home.css  main.css  media-detail.css  search.css  torrent-debug.css  torrent-selector.css  video-player.css  view-all.css
