[package]
name = "magnolia-tauri-app"
version = "1.1.0"
description = "Media torrent client"
authors = ["chair"]
license = "MIT"
repository = "https://github.com/chwair/magnolia"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }
ffmpeg-sidecar = "2.3.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"

librqbit = "8.1.1"
axum = { version = "0.8", features = ["http2"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["io"] }

matroska = "0.18"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
async-trait = "0.1"
serde_bencode = "0.2"
regex = "1.10"
tempfile = "3"
chrono = "0.4"
urlencoding = "2.1"
sha2 = "0.10"
base64 = "0.22"
md5 = "0.7"
ffmpeg-sidecar = "2.3.0"
dirs = "5.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
zip = "7.0.0"
gag = "1.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]

